examples/test/testpolicy556.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy556
  namespace: namespace21
spec:
  podSelector:
    matchLabels:
      key7: value32
      key35: value19
      key31: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value18
      podSelector:
        matchLabels:
          key30: value32
          key15: value48
